--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,3 @@
-<ul id="messages">
-  <story ng-repeat="story in topStories"></story>
-</ul>
+<div class="stories">
+  <story class="story" ng-repeat="story in topStories"></story>
+</div>
